--- a/win32/encode_keychange/encode_keychange.vcproj
+++ b/win32/encode_keychange/encode_keychange.vcproj
@@ -73,7 +73,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/encode_keychange.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -165,7 +165,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/encode_keychange.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -259,7 +259,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/encode_keychange.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -352,7 +352,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/encode_keychange.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
