--- a/win32/snmptrapd/snmptrapd.vcproj
+++ b/win32/snmptrapd/snmptrapd.vcproj
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib netsnmpagent.lib netsnmpmibs.lib netsnmptrapd.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmptrapd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -164,7 +164,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib netsnmpagent.lib netsnmpmibs.lib netsnmptrapd.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmptrapd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -257,7 +257,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib netsnmpagent.lib netsnmpmibs.lib netsnmptrapd.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmptrapd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -351,7 +351,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib netsnmpagent.lib netsnmpmibs.lib netsnmptrapd.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmptrapd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
