--- a/net-snmp/win32/snmpbulkwalk/snmpbulkwalk.vcproj
+++ b/net-snmp/win32/snmpbulkwalk/snmpbulkwalk.vcproj
@@ -72,7 +72,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpbulkwalk.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -164,7 +164,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpbulkwalk.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -258,7 +258,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpbulkwalk.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -351,7 +351,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpbulkwalk.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
