--- a/net-snmp/win32/snmpnetstat/snmpnetstat.vcproj
+++ b/net-snmp/win32/snmpnetstat/snmpnetstat.vcproj
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpnetstat.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -164,7 +164,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpnetstat.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -257,7 +257,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpnetstat.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -351,7 +351,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpnetstat.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
