--- a/net-snmp/win32/snmpstatus/snmpstatus.vcproj
+++ b/net-snmp/win32/snmpstatus/snmpstatus.vcproj
@@ -72,7 +72,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpstatus.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -165,7 +165,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpstatus.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -258,7 +258,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpstatus.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -352,7 +352,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="netsnmp.lib ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib"
 				OutputFile="../$(IntDir)/snmpstatus.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
